fixed alignment for nav title

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -19,7 +19,7 @@ body {
     background-color: white;
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4 {
    color: #BD9319;
 }
 
